# poseidon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  gates_report.json  oracle_server.ts  package.json  release-please-config.json  tsconfig.json
.github/: NIGHTLY_CANARY_DIED.md
.github/workflows/: benchmark.yml  nightly-canary.yml  test.yml
dev/bench/: data.js
scripts/: build-brillig-report.sh  build-gates-report.sh  fuzz-test.sh  run.sh
src/: bench.nr  lib.nr  oracle_tests.nr  poseidon2.nr  tests.nr
src/poseidon/: bn254.nr  mod.nr
src/poseidon/bn254/: perm.nr
tests/: differential.rs
