[package]
name = "noir_library"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
proptest = "1.2.0"
noir-runner = { git = "https://github.com/noir-lang/noir-runner", branch = "main" }
light-poseidon = "0.3.0"

# Arkworks
ark-bn254 = { version = "^0.5.0", default-features = false, features = [
    "curve",
] }

acvm = { git = "https://github.com/noir-lang/noir", tag = "v1.0.0-beta.3" }
